<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:layout="@layout/fragment_about"
    android:adjustViewBounds="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.AboutFragment">

    <Button
        android:id="@+id/buttonAbout"
        android:layout_marginBottom="-5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_combinatorics"
        android:gravity="left|center_vertical"
        android:paddingStart="20dp"
        android:drawableRight="@drawable/ic_btn_arrow"
        android:textColor="@color/darkOrchid"/>

    <Button
        android:id="@+id/buttonTerms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms_of_use"
        android:layout_marginTop="-4dp"
        android:gravity="left|center_vertical"
        android:paddingLeft="20dp"
        android:drawableRight="@drawable/ic_btn_arrow"
        android:textColor="@color/orangeRed" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/version"
        android:textAllCaps="true"
        android:paddingTop="20dp"
        android:textStyle="normal"/>

    <TextView
        android:id="@+id/textViewV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:paddingLeft="10dp"
        android:textStyle="normal"
        android:paddingTop="5dp"/>

    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="16sp"
        android:text="@string/general_info" />




</androidx.appcompat.widget.LinearLayoutCompat>